--- a/biome.json
+++ b/biome.json
@@ -1,16 +1,36 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
-	"assist": { "actions": { "source": { "organizeImports": "on" } } },
+
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on"
+			}
+		}
+	},
+
+	"files": {
+		"ignoreUnknown": false,
+		"includes": ["**", "!!**/dist", "!!**/.next", "!!**/storybook-static"]
+	},
+
+	"formatter": {
+		"enabled": true,
+		"includes": ["**"]
+	},
+
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"complexity": {
+				"noImportantStyles": {
+					"level": "warn"
+				}
+			}
 		}
 	},
-	"formatter": {
-		"enabled": true,
-		"includes": ["**", "!**/dist/**", "!**/.next/**", "!**/storybook-static/**"]
-	},
+
 	"javascript": {
 		"formatter": {
 			"semicolons": "asNeeded"
