docs(tokens): README를 한국어로 번역 및 사용 시나리오 추가

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -7,7 +7,7 @@
 		"dist"
 	],
 	"exports": {
-		"./theme.css": "./dist/theme.css",
+		"./index.css": "./dist/index.css",
 		"./tokens.json": "./dist/tokens.json",
 		"./tokens.d.ts": "./dist/tokens.d.ts"
 	},
