feat(css): README 한국어 번역, tokens import 경로 수정 및 불필요한 파일 정리

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -7,5 +7,15 @@
 	"sideEffects": [
 		"**/*.css"
 	],
-	"main": "src/index.css"
+	"main": "src/index.css",
+	"files": [
+		"src"
+	],
+	"exports": {
+		".": "./src/index.css",
+		"./src/index.css": "./src/index.css"
+	},
+	"dependencies": {
+		"@gbgr/tokens": "workspace:*"
+	}
 }
