--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -9,6 +9,8 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
+			"require": "./dist/index.js",
+			"default": "./dist/index.js",
 			"types": "./dist/index.d.ts"
 		},
 		"./*": "./dist/*"
@@ -17,7 +19,9 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "node build/build.mjs"
+		"build": "rm -rf dist tsconfig.tsbuildinfo && node build/build.mjs && tsc -b tsconfig.json --force",
+		"typecheck": "tsc -p tsconfig.json --noEmit",
+		"clean": "rm -rf dist tsconfig.tsbuildinfo && find src -type f \\( -name '*.js' -o -name '*.js.map' -o -name '*.d.ts' -o -name '*.d.ts.map' \\) -delete"
 	},
 	"devDependencies": {
 		"@svgr/cli": "latest",
