--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../../configs/tsconfig/react.json",
 	"include": ["src"],
 	"compilerOptions": {
+		"rootDir": "src",
 		"outDir": "dist",
 		"module": "ESNext",
 		"composite": true
