chore: add changeset enforcement and workflows

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
 		"check": "biome check . && pnpm check:rules",
 		"check:rules": "node scripts/validate-react-rules.mjs",
 		"check:write": "biome check . --write",
+		"changeset": "changeset",
+		"changeset:version": "changeset version",
+		"changeset:publish": "changeset publish",
 		"typecheck": "turbo run typecheck",
 		"release": "turbo build && changeset publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@changesets/cli": "latest",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
 		"turbo": "latest",
