chore: add changeset for initial component release

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,5 +1,5 @@
 {
-	"changelog": ["@changesets/changelog-github", { "repo": "gbgr/gbgr-design" }],
+	"changelog": false,
 	"access": "public",
 	"baseBranch": "main",
 	"ignore": []
