fix(release): publish with PAT + skip docs build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,5 +53,7 @@ jobs:
           commit: 'chore: update versions' # 커밋 메시지를 더 명확하게 변경
           title: 'chore: update versions' # PR/커밋 제목을 더 명확하게 변경
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # NOTE: Org policy may block `secrets.GITHUB_TOKEN` from creating PRs.
+          # If that happens, set a repo-scoped PAT as `CHANGESETS_GITHUB_TOKEN`.
+          GITHUB_TOKEN: ${{ secrets.CHANGESETS_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
