--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"changeset:version": "changeset version",
 		"changeset:publish": "changeset publish",
 		"typecheck": "turbo run typecheck",
-		"release": "turbo build && changeset publish"
+		"release": "turbo run build --filter=@gbgr/* && changeset publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
