feat(ui): add @gbgr/ui bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 	"references": [
 		{ "path": "./apps/docs" },
 		{ "path": "./packages/css" },
+		{ "path": "./packages/ui" },
 		{ "path": "./packages/icons" },
 		{ "path": "./packages/react" },
 		{ "path": "./packages/tokens" }
