--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,6 +29,10 @@
 		"react": ">=18",
 		"react-dom": ">=18"
 	},
+	"devDependencies": {
+		"react": "latest",
+		"react-dom": "latest"
+	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
 		"typecheck": "tsc -p tsconfig.json --noEmit",
