--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,6 +18,7 @@
 		"@docusaurus/module-type-aliases": "^3.6.0",
 		"@docusaurus/preset-classic": "^3.6.0",
 		"@docusaurus/theme-classic": "^3.6.0",
+		"@docusaurus/types": "^3.6.0",
 		"@mdx-js/react": "^3.0.1",
 		"clsx": "^2.1.1",
 		"prism-react-renderer": "^2.4.1",
