--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "turbo run build",
 		"postbuild": "node scripts/sync-vercel-output.mjs",
 		"dev": "turbo run dev",
+		"test": "turbo run test",
 		"docs:dev": "pnpm --filter docs dev",
 		"docs:build": "pnpm --filter docs build",
 		"lint": "turbo run lint",
@@ -20,10 +21,15 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@changesets/changelog-git": "^0.2.1",
 		"@changesets/cli": "latest",
+		"@testing-library/react": "^16.2.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
+		"jsdom": "^26.0.0",
 		"turbo": "latest",
+		"vitest": "^3.2.4",
 		"typescript": "latest"
 	},
 	"packageManager": "pnpm@10.28.1",
