--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
 		"typecheck": {
 			"dependsOn": ["^typecheck"]
 		},
+		"test": {
+			"dependsOn": ["^test"]
+		},
 		"dev": {
 			"cache": false,
 			"persistent": true
