--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,10 @@ jobs:
         run: pnpm check
 
       - name: Run typechecks
-        run: pnpm typecheck # 이 스크립트가 없으면 에러가 발생할 수 있습니다.
+        run: pnpm typecheck
+
+      - name: Run tests
+        run: pnpm test
 
       - name: Build all packages
         run: pnpm build
