--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,7 @@
 		"@gbgr/css": "workspace:*",
 		"@gbgr/icons": "workspace:*",
 		"@gbgr/react": "workspace:*",
+		"@gbgr/react-headless": "workspace:*",
 		"@docusaurus/core": "^3.6.0",
 		"@docusaurus/module-type-aliases": "^3.6.0",
 		"@docusaurus/preset-classic": "^3.6.0",
