chore(biome): ignore turbo cache from checks

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,13 @@
 
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!!**/dist", "!!**/.next", "!!**/storybook-static"]
+		"includes": [
+			"**",
+			"!!**/dist",
+			"!!**/.next",
+			"!!**/storybook-static",
+			"!!**/.turbo"
+		]
 	},
 
 	"formatter": {
