--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"build": "turbo run build",
+		"build": "turbo run build --filter=@gbgr/* && pnpm --filter docs build",
 		"postbuild": "node scripts/sync-vercel-output.mjs",
 		"dev": "turbo run dev",
 		"test": "turbo run test",
